es-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "elasticsearchingresshost"
  labels:
    component: elasticsearch
    role: data 
spec:
  rules:
  - host: <hostname> 
    http:
      paths:
      - path: /
        backend:
          serviceName: "elasticsearch"
          servicePort: 9200
